maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:24: error: not enough arguments for method trouverChemin: (x: Int, y: Int)Unit.
Unspecified value parameters x, y.
  while (!estSurBiscuit()) trouverChemin();
                                        ^